2009-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Build fix.

        https://bugs.webkit.org/show_bug.cgi?id=25382
        Remove direct reference to CallFrame.h include to pacify Win build.

        * bindings/js/JSDOMBinding.h: Removed ScriptState.h include.
        * bindings/js/ScriptState.h: Replaced CallFrame.h with JSDOMBinding.h

2009-04-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 25374: AX: No AXValue change sent when text is auto-inserted
        https://bugs.webkit.org/show_bug.cgi?id=25374

        When an input's text value is changed through the DOM, no AXValueChange notification is being sent.

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::setInnerTextValue):

2009-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=25382
        Move scriptStateFromNode to ScriptState.

        * bindings/js/JSDOMBinding.cpp: Moved scriptStateFromNode to ScriptState.
        * bindings/js/JSDOMBinding.h: Ditto.
        * bindings/js/ScriptState.cpp:
        (WebCore::scriptStateFromNode): Added.
        * bindings/js/ScriptState.h: Ditto.
        * bindings/v8/ScriptState.cpp:
        (WebCore::scriptStateFromNode): Added.
        * bindings/v8/ScriptState.h: Ditto.
        * dom/NodeFilter.h: Removed JSDOMBinding header include.
        * dom/NodeIterator.h: Ditto.
        * dom/TreeWalker.h: Ditto.

2009-04-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 25428: 5 crashes in DumpRenderTree at com.apple.WebCore • -[AccessibilityObjectWrapper accessibilityAttributeValue:] + 830
        https://bugs.webkit.org/show_bug.cgi?id=25428

        When marking children as changed in accessibility, we cannot rely on the accessibility parent chain existing.
        Instead, the render chain needs to be consulted.

        * page/AccessibilityRenderObject.cpp: